--- a/pages/2014-01-15.md
+++ b/pages/2014-01-15.md
@@ -1,17 +1,17 @@
 # Скучно сегодня
 
-Ну, сегодня какой-то скучный день, точнее утро. Поэтому сразу к ссылкам.
+Ну, сегодня какой-то скучный день, точнее, утро. Поэтому - сразу к ссылкам.
 
 ![center](http://s19.postimg.org/5sfsbmdxf/image.jpg)
 
 
-* [DropBox и Uber: стоят миллионы, но все еще в шаге от провала](http://www.wired.com/business/2014/01/dropbox-uber/). Такая, довольно спорная статья с интересным мнением. Ну действительно удивительно, как компании, которые оцениваю в миллиарды, могут позволить себе двухдневные простои из-за софтверных ошибок. Очень много денег поставлено на карту. Но статья и правда спорная, все же wired.
-* Ребята из TreeHouse [рассуждают об psd-to-html](http://blog.teamtreehouse.com/psd-to-html-is-dead). Действительно, еще 3-4 года назад это было очень популярно: просто нарисуй в фотошопе сайт и "сконвертируй" (конечно обычно эта конвертация производилась живыми людьми) в готовый HTML-сайт. Но в современном мире просто фотошопом никак не обойдешься - нужна демонстрация анимации, описание поведения сайта в сложных ситуация, адаптация под разные разрешения экрана. Именно по этой причине я совсем не понимаю "чистых дизайнеров", которые не в состоянии сделать прототип сайта, а могут его только нарисовать. Ребята, вы мамонты! Если не адаптируетесь - вымрете! Тем более, что научиться верстать прототипы - дело 3-4 месяцев в сложном случае.
-* [Как применить диплернинг для распознавания голоса китов](http://danielnouri.org/notes/2014/01/10/using-deep-learning-to-listen-for-whales/). Да, чем только люди не занимаются.
-* Очень тихо и незаметно [AMD анонсировала новые процессоры](http://venturebeat.com/2014/01/14/amd-launches-kaveri-processors-aimed-at-starting-a-computing-revolution/) Kaveri. Все говорят, что главная аудитория их - игроманы. Но, кажется, это всё же система для компактных десктопов и ноутбуков. Я не очень понимаю в процессорах, но уверен что настоящие игроманы никогда не оценят GPU совмещенный с CPU. На AnandTech более полный [обзор](http://www.anandtech.com/show/7677/amd-kaveri-review-a8-7600-a10-7850k) и выводы.
-* Клевый и функциональный [метод прототипировать бизнесплан](http://funded.io) для какого-нибудь молодго IT-предприятия. Ничего уникально, но приятно что предусмотрено почти всё и много красивых графиков.
-* Нравится, как mozilla сейчас активно вкладывается в asm.js. Они написали [большой отчет о том, как работает ahead of time компиляция](https://blog.mozilla.org/luke/2014/01/14/asm-js-aot-compilation-and-startup-performance/) в новых релизах asm.js. С хорошими (хотя и слегка однобокими) тестами. Пост рекомендуется к прочтению всем, кого интересует онлайн-компиляция и как она устроена.
-* У rust довольно сложная система типов, из-за разных режимов работы с данными. Безопасность вообще дается не просто. Но есть помощь: [периодическая таблица типов Rust](http://cosmic.mearie.org/2014/01/periodic-table-of-rust-types/) - удобная табличка, знал бы про нее раньше - было бы проще.
+* [DropBox и Uber: стоят миллионы, но все ещё в шаге от провала](http://www.wired.com/business/2014/01/dropbox-uber/). Такая довольно спорная статья с интересным мнением. Ну, действительно, удивительно, как компании, которые оценивают в миллиарды, могут позволить себе двухдневные простои из-за софтверных ошибок. Очень много денег поставлено на карту. Но статья и правда спорная, всё же wired.
+* Ребята из TreeHouse [рассуждают об psd-to-html](http://blog.teamtreehouse.com/psd-to-html-is-dead). Действительно, ещё 3-4 года назад это было очень популярно: просто нарисуй в фотошопе сайт и "сконвертируй" (конечно, обычно эта конвертация производилась живыми людьми) в готовый HTML-сайт. Но в современном мире просто фотошопом никак не обойдёшься - нужна демонстрация анимации, описание поведения сайта в сложных ситуация, адаптация под разные разрешения экрана. Именно по этой причине я совсем не понимаю "чистых дизайнеров", которые не в состоянии сделать прототип сайта, а могут его только нарисовать. Ребята, вы мамонты! Если не адаптируетесь - вымрете! Тем более, что научиться верстать прототипы - дело 3-4 месяцев в сложном случае.
+* [Как применить дип лёрнинг для распознавания голоса китов](http://danielnouri.org/notes/2014/01/10/using-deep-learning-to-listen-for-whales/). Да, чем только люди не занимаются.
+* Очень тихо и незаметно [AMD анонсировала новые процессоры](http://venturebeat.com/2014/01/14/amd-launches-kaveri-processors-aimed-at-starting-a-computing-revolution/) Kaveri. Все говорят, что главная аудитория их - игроманы. Но, кажется, это всё же система для компактных десктопов и ноутбуков. Я не очень понимаю в процессорах, но уверен, что настоящие игроманы никогда не оценят GPU, совмещённый с CPU. На AnandTech более полный [обзор](http://www.anandtech.com/show/7677/amd-kaveri-review-a8-7600-a10-7850k) и выводы.
+* Клёвый и функциональный [метод прототипировать бизнес-план](http://funded.io) для какого-нибудь молодого IT-предприятия. Ничего уникального, но приятно, что предусмотрено почти всё и много красивых графиков.
+* Нравится, как mozilla сейчас активно вкладывается в asm.js. Они написали [большой отчёт о том, как работает ahead of time компиляция](https://blog.mozilla.org/luke/2014/01/14/asm-js-aot-compilation-and-startup-performance/) в новых релизах asm.js. С хорошими (хотя и слегка однобокими) тестами. Пост рекомендуется к прочтению всем, кого интересует онлайн-компиляция и как она устроена.
+* У rust довольно сложная система типов, из-за разных режимов работы с данными. Безопасность вообще даётся непросто. Но есть помощь: [периодическая таблица типов Rust](http://cosmic.mearie.org/2014/01/periodic-table-of-rust-types/) - удобная табличка, знал бы про нее раньше - было бы проще.
 * Кстати, если вы хотите попробовать программирование на rust - есть много способов. Например недавно такая возможность [появилась у разработчиков для iOS](https://github.com/shilgapira/ObjCrust). Пока что не работает в симуляторе, но на самом устройстве работает вполне окей.
-* Для тех, кто как и я любит странное: [Pharocloud](http://pharocloud.com/), хостинг для веб-приложений на смолтолке, точнее на SeaSide для смолтолка. Я даже думаю попробовать, тем более что цены небольшие. Правда, думаю, проект фараклауд прогорит. Потому что в реальной жизни никому не нужен смолтолк :)
-* На нетехничекской, тревельной часть стэкэксченджа офигенный [тред о том, почему на фото в документах просят не улыбаться](http://travel.stackexchange.com/questions/11534/why-are-you-now-required-not-to-smile-in-passport-photos). Небольшой, но познавательный с точки зрения понимания американского права.
+* Для тех, кто, как и я, любит странное: [Pharocloud](http://pharocloud.com/), хостинг для веб-приложений на смолтолке, точнее, на SeaSide для смолтолка. Я даже думаю попробовать, тем более, что цены небольшие. Правда, думаю, проект фараклауд прогорит. Потому что в реальной жизни никому не нужен смолтолк :)
+* На нетехнической, трэвельной часть стэкэксченджа офигенный [тред о том, почему на фото в документах просят не улыбаться](http://travel.stackexchange.com/questions/11534/why-are-you-now-required-not-to-smile-in-passport-photos). Небольшой, но познавательный с точки зрения понимания американского права.
