Ещё литредакторское, вдогонку

--- a/pages/2014-01-16.md
+++ b/pages/2014-01-16.md
@@ -5,8 +5,8 @@
 ![center](http://i.imgur.com/TBQiKWl.jpg)
 
 * [Impermium](https://www.impermium.com/) продался гуглу. Это, конечно, было ожидаемо. Но очень жаль, что этот сервис теперь будет google-only. Они пытались делать очень простую штуку - отсеивать роботов при регистрации пользователей с помощью анализа поведения. В общем, то, что я тоже делал неоднократно, но они это делали массово, большие молодцы были.
-* Майкрософт [решили поддерживать секурити патчи Windows XP](http://thenextweb.com/microsoft/2014/01/15/microsoft-extends-updates-windows-xp-security-products-july-14-2015/#!skiWt) до 14 июля 2015го. Интересно, это как-то связано с историей про взлом камер контроля скорости в Подмосковье? :)
-* Если верить [заметке от МаркетВотч](http://www.marketwatch.com/story/yahoo-says-coo-de-castro-leaving-thursday-2014-01-15) и [бизнесинсайдеру](http://www.businessinsider.com/after-only-15-months-marissa-mayer-fired-her-first-major-hire-2014-1), то де Кастро покидает пост COO Yahoo. Что ж, это было предсказуемо, Мариса наверное нашла себе нового человека, из своей тусовки - из гугла. Напомню, это было громкое дело, де Кастро был вытащен за большие деньги из того же самого гугла чуть более года назад. Как-то в последнее время у g-word слишком много санта-барбары. Когда ж они там работать-то успевают?
+* Майкрософт [решили поддерживать секурити патчи Windows XP](http://thenextweb.com/microsoft/2014/01/15/microsoft-extends-updates-windows-xp-security-products-july-14-2015/#!skiWt) до 14 июля 2015. Интересно, это как-то связано с историей про взлом камер контроля скорости в Подмосковье? :)
+* Если верить [заметке от МаркетВотч](http://www.marketwatch.com/story/yahoo-says-coo-de-castro-leaving-thursday-2014-01-15) и [бизнесинсайдеру](http://www.businessinsider.com/after-only-15-months-marissa-mayer-fired-her-first-major-hire-2014-1), то де Кастро покидает пост COO Yahoo. Что ж, это было предсказуемо, Мариса, наверное, нашла себе нового человека, из своей тусовки - из гугла. Напомню, это было громкое дело, де Кастро был вытащен за большие деньги из того же самого гугла чуть более года назад. Как-то в последнее время у g-word слишком много санта-барбары. Когда ж они там работать-то успевают?
 * [Скандальная заметка](http://istrategylabs.com/2014/01/3-million-teens-leave-facebook-in-3-years-the-2014-facebook-demographic-report/) с мыслью "тинейджеры сбегают из фейсбука". Даже если это правда, бегут они, в среднем, в твиттер и инстаграмм. Точнее даже, только в инстаграмм, который и так принадлежит фейсбуку. В общем без паники, мировой ландшафт соц-сетей пока не изменился.
 * Говорят, [вчера взломали Path](http://valleywag.gawker.com/path-got-hacked-and-no-one-cared-1502223461). Всем пофиг.
 * [Сколько стоит создать большую видеоигру](http://kotaku.com/how-much-does-it-cost-to-make-a-big-video-game-1501413649)? Попробуйте ответить для себя, не глядя в саму статью, а потом сравнить. С наслаждением и некоторой мстительностью хохотал над суммой, потраченной на разработку SW:TOR. Так и хочется сказать "ПОТРАЧЕНО".
