Добавил саму суть концепции телескопа в L2

--- a/pages/2014-01-17.md
+++ b/pages/2014-01-17.md
@@ -17,7 +17,7 @@
 * Британская библиотека [выложила в открытый доступ](http://www.itsnicethat.com/articles/voices-of-science) какое-то невероятное количество аудио-видео материалов. Это офигенно! Я уже пытаюсь всё это качать - у меня много времени в перелетах. И вместо сериалов. Всем фанатам науки посвящается.
 * Вышел очень интересный [улучшатель фоточек для iOS](https://itunes.apple.com/ru/app/id793762435?mt=8) - Prettify. Действительно симпатичный, приглядитесь.
 * [Blinkist](http://thenextweb.com/apps/2014/01/16/blinkist/#!sobFP) - новый сервис для тех, кто хочет читать быстро. Нет, не так - для тех, кто хочет читать только смысл, без лирических отступлений. В общем, идея простая и гениальная - это книгочиталка плюс сервис по продаже "выжимки" из книг. Представляете, сюжет "Война и Мир" можно прочитать за 15 минут. Что уж говорить о других книгах. Наверное, основная будущая аудитория сервиса - нерадивые школьники и очень ленивые люди. И я, потому что я иногда веду себя как оба вышеперечисленных типа.
-* Примерно месяц ушел на то, чтобы подтвердить - [телескоп Gaia вышел на свою орбиту](http://www.redorbit.com/news/space/1113047555/gaia-spacecraft-begins-orbit-around-nothing-011514/). Офигенно интересно что из этого получится. Статья на самом деле о том, что орбита у телескопа очень интересная - он вращается вокруг второй точки Лагранжа взвешенной системы Солнце-Земля. Очень красивая концепция. С помощью этого телескопа и его подвижного размещения земляне надеются построить трёхмерную карту звездного неба. Почему-то мне сейчас вспомнилось Маппет-шоу с их подсериалом "Свиньи в космосе!"
+* Примерно месяц ушел на то, чтобы подтвердить - [телескоп Gaia вышел на свою орбиту](http://www.redorbit.com/news/space/1113047555/gaia-spacecraft-begins-orbit-around-nothing-011514/). Офигенно интересно что из этого получится. Статья на самом деле о том, что орбита у телескопа очень интересная - он вращается вокруг второй точки Лагранжа взвешенной системы Солнце-Земля. Очень красивая концепция: Земля экранирует его от теплового и прочего излучения Солнца. С помощью этого телескопа и его подвижного размещения земляне надеются построить трёхмерную карту звездного неба. Почему-то мне сейчас вспомнилось Маппет-шоу с их подсериалом "Свиньи в космосе!"
 * Ещё одно [обсуждение прозрачных зарплат](http://www.fastcompany.com/3024306/bottom-line/why-this-startup-made-their-salaries-radically-transparent), введеных в моду Buffer. Да, идея, по которой все в компании знают, сколько они получают, хороша, хотя накладывает много обязательств. В следующем своем маленьком бизнесе обязательно попробую на живых людях. Но **точно** не рекомендую применять на коллективах больше 30 человек - обязательно начнутся попытки накрутить систему и крики о ее несовершенстве.
 * [Удивительное облако](http://cryptoworld.co.uk/weird-cloud-seen-space-station/), сфотографированное с МКС. Похоже на космическую медузу. Или  на след от взрыва. Или на след от космического корабля в стилистике Звёздных Войн :)
 * Автор проекта Hy [описал текущее состояние и развитие за год](http://fox.devport.no/?p=82). Вообще, оказывается, сделано дофига. А главное, Hy, о котором я уже писал, уже готов для какого-то реального применения. Если вы ещё не знаете - это такой lisp-подобный язык, который компилируется в питон, и, если надо, - даже налету. Игрушка, конечно, но работает хорошо, мне нравится.
