--- a/pages/2014-01-20.md
+++ b/pages/2014-01-20.md
@@ -4,16 +4,16 @@
 
 ![center](http://img-fotki.yandex.ru/get/9814/9320383.d/0_97c43_ffb9c17a_orig)
 
-* Отличная [идея - отслеживать погодные явления через соц.сети](http://blog.geniusly.co/tracking-weather-through-social-media-analytics/). Действительно, я не знаю как мелкие проявления, но как только в Москве в разгар лета шел дождь - можно было прямо по твитам на карту наносить в каком районе он идет. Осталось дело за малым - визуализировать все это правильно.
-* Я думал, что история про сотрудничество Nook и Microsoft давно умерла. Но нет, [слухи говорят что Nook RT все же выйдет](http://www.the-digital-reader.com/2014/01/10/nook-rt-lives-nook-dead/#.Uty1oT17ZL8). Это при том, что сама майкрософт от выпуска Surface RT кажется, отказалась, в пользу интел-совместимых процессоров. В общем я уже ничего не понимаю в этой катавасии, будем надеяться, что у нука получится что-то пристойное.
-* Feedly опять проказничают. Их уже ругали за то, что они пытались показывать контент статей прямо на своем сервисе. А сейчас [они подменяют ссылки на свои, при поделиськах в Твиттер](http://www.the-digital-reader.com/2014/01/18/feedly-found-new-way-steal-page-views-publishers/#.UtxJoT17ZL8). В принципе все логично и никто ничего не теряет. Но паника уже началась.
-* Китайцы выпускают очередную [чисто китайскую операционную систему](http://sinosphere.blogs.nytimes.com/2014/01/17/china-unveils-new-native-operating-system/). В статье Бри Фенга рассказывается об COS или China Operating System, якобы абсолютно оригинальной операционной системе, разработка которой заняла 15 лет. Работает она и на персональных компьютерах и на телефонах и совершенно независима от некитайских компаний. В общем, я убежден, что это линукс и буду называть его "китайский МСВС"
-* Судя по графикам Skype [натурально убивает индустрию международных телефонных разговоров](http://blogs.wsj.com/corporate-intelligence/2014/01/15/skypes-incredible-rise-in-one-image/). Уже 40% всех международных звонков - это звонки со скайпа на скайп. Оно и понятно, всегда лучше звонить бесплатно. Обидно, только, что убивая вполне прибыльный бизнес, скайп сам не зарабатывает почти ничего. Это как убивать шаурмяшечные в Москве, раздавая еду бесплатно - можно, но когда-то деньги кончатся и в Москве на улицах станет нечего есть :(
-* Google [начали удалять из стора расширений для Хрома](http://news.cnet.com/8301-1023_3-57617467-93/google-discards-extensions-that-force-feed-users-ads-in-chrome/) экстеншны, вставляющие рекламу. Это правильно. Но, удаляют они их с формулировкой "приложение должно выполнять только одну функцию" - а вот это уже очень плохо. По сути новое полиси на расширения заставит разработчиков делать 100500 расширений, а пользователям станет еще сложнее их находит и ставить. Досадно.
-* Martin Bryant [о том, возможно ли перейти на Chromebook](http://thenextweb.com/google/2014/01/18/beyond-chromebooks-google-could-make-almost-everyone-chrome-os-user/#!sEnsX). Он думает что да, однажды. А я думаю что нет - потому, что пробовал. Пока-что хромоси нужно пройти огромный путь, который который проделала Windows, чтобы научиться работать со всем этим железом и пользователями.
-* [Каким может быть следующий биткоин?](http://voices.yahoo.com/bitcoin-20-explained-colored-coins-vs-mastercoin-vs-12475857.html) Статья банальная, с перечислением разных новых проектов, привязанных к идее биткоина, как децентрализованной валюты. Пока ни одной серьезной инициативы я не увидел. Ну, некоторым нравится nxt, но я бы не спешил.
-* И кстати, помните мы обсуждали проблему финансирования OpenBSD? [Говорят, проблема решена](http://www.thedrinkingrecord.com/2014/01/19/romanian-billionaire-saves-openbsd/) благодаря некоему дарителю биткоинов. В общем все логично, криптовалюта спасла крипто ос.
-* Очень правильная, хотя и уже старая статья [Почему прототипы это не классы](http://raganwald.com/2014/01/19/prototypes-are-not-classes.html) в Javascript. Прочитал и еще раз уложил все отличия в голове. Как-то иногда не задумываешься, насколько javascript похож на lisp в этих аспектах. 
-* FreeBSD10 [вышел](https://wiki.freebsd.org/WhatsNew/FreeBSD10). В списке обновлений есть забавное, например поддержка Raspberry Pi из коробки. 
-* Питон и Фласк [удивительно мощны](http://jeffknupp.com/blog/2014/01/18/python-and-flask-are-ridiculously-powerful/), пишет нам Джеф Кнапп. Ну, да, хотя мне очень нехватает реалтаймовости Meteor. Раньше я догонялся juggernaut, но он кажется больше не развивается. 
+* Отличная [идея - отслеживать погодные явления через соц. сети](http://blog.geniusly.co/tracking-weather-through-social-media-analytics/). Действительно, я не знаю как мелкие проявления, но как только в Москве в разгар лета шёл дождь - можно было прямо по твитам на карту наносить в каком районе он идет. Осталось дело за малым - визуализировать всё это правильно.
+* Я думал, что история про сотрудничество Nook и Microsoft давно умерла. Но нет, [слухи говорят, что Nook RT всё же выйдет](http://www.the-digital-reader.com/2014/01/10/nook-rt-lives-nook-dead/#.Uty1oT17ZL8). Это при том, что сама майкрософт от выпуска Surface RT, кажется, отказалась в пользу интел-совместимых процессоров. В общем, я уже ничего не понимаю в этой катавасии, будем надеяться, что у нука получится что-то пристойное.
+* Feedly опять проказничают. Их уже ругали за то, что они пытались показывать контент статей прямо на своем сервисе. А сейчас [они подменяют ссылки на свои при поделиськах в Твиттер](http://www.the-digital-reader.com/2014/01/18/feedly-found-new-way-steal-page-views-publishers/#.UtxJoT17ZL8). В принципе, всё логично и никто ничего не теряет. Но паника уже началась.
+* Китайцы выпускают очередную [чисто китайскую операционную систему](http://sinosphere.blogs.nytimes.com/2014/01/17/china-unveils-new-native-operating-system/). В статье Бри Фенга рассказывается о COS или China Operating System, якобы абсолютно оригинальной операционной системе, разработка которой заняла 15 лет. Работает она и на персональных компьютерах, и на телефонах, и совершенно независима от некитайских компаний. В общем, я убеждён, что это линукс и буду называть его "китайский МСВС"
+* Судя по графикам, Skype [натурально убивает индустрию международных телефонных разговоров](http://blogs.wsj.com/corporate-intelligence/2014/01/15/skypes-incredible-rise-in-one-image/). Уже 40% всех международных звонков - это звонки со скайпа на скайп. Оно и понятно, всегда лучше звонить бесплатно. Обидно только, что убивая вполне прибыльный бизнес, скайп сам не зарабатывает почти ничего. Это как убивать шаурмяшечные в Москве, раздавая еду бесплатно - можно, но когда-то деньги кончатся и в Москве на улицах станет нечего есть :(
+* Google [начали удалять из стора расширений для Хрома](http://news.cnet.com/8301-1023_3-57617467-93/google-discards-extensions-that-force-feed-users-ads-in-chrome/) экстеншны, вставляющие рекламу. Это правильно. Но, удаляют они их с формулировкой "приложение должно выполнять только одну функцию" - а вот это уже очень плохо. По сути, новое полиси на расширения заставит разработчиков делать 100500 расширений, а пользователям станет еще сложнее их находить и ставить. Досадно.
+* Martin Bryant [о том, возможно ли перейти на Chromebook](http://thenextweb.com/google/2014/01/18/beyond-chromebooks-google-could-make-almost-everyone-chrome-os-user/#!sEnsX). Он думает что да, однажды. А я думаю, что нет - потому что пробовал. Пока что хромоси нужно пройти огромный путь, который проделала Windows, чтобы научиться работать со всем этим железом и пользователями.
+* [Каким может быть следующий биткоин?](http://voices.yahoo.com/bitcoin-20-explained-colored-coins-vs-mastercoin-vs-12475857.html) Статья банальная, с перечислением разных новых проектов, привязанных к идее биткоина, как децентрализованной валюты. Пока ни одной серьёзной инициативы я не увидел. Ну, некоторым нравится nxt, но я бы не спешил.
+* И, кстати, помните мы обсуждали проблему финансирования OpenBSD? [Говорят, проблема решена](http://www.thedrinkingrecord.com/2014/01/19/romanian-billionaire-saves-openbsd/) благодаря некоему дарителю биткоинов. В общем, всё логично, криптовалюта спасла крипто ос.
+* Очень правильная, хотя и уже старая, статья [почему прототипы - это не классы](http://raganwald.com/2014/01/19/prototypes-are-not-classes.html) в Javascript. Прочитал и еще раз уложил все отличия в голове. Как-то иногда не задумываешься, насколько javascript похож на lisp в этих аспектах. 
+* FreeBSD10 [вышел](https://wiki.freebsd.org/WhatsNew/FreeBSD10). В списке обновлений есть забавное, например, поддержка Raspberry Pi из коробки. 
+* Питон и Фласк [удивительно мощны](http://jeffknupp.com/blog/2014/01/18/python-and-flask-are-ridiculously-powerful/), пишет нам Джеф Кнапп. Ну, да, хотя мне очень не хватает реалтаймовости Meteor. Раньше я догонялся juggernaut, но он, кажется, больше не развивается. 
 * Почему [электрочайник стоит 90 баксов](http://blog.chewxy.com/2014/01/20/why-does-a-good-kettle-cost-90)? Потому что маркетинг-шмаркетинг и всем хочется зарабатывать больше. Мне ответ был очевиден, но автор статьи сначала сомневался. 
