--- a/pages/2014-01-27.md
+++ b/pages/2014-01-27.md
@@ -7,23 +7,23 @@
 ![center](http://www.thongtincongnghe.com/sites/default/files/images/2011/9/23/img-1316763214-2.jpg)
 
 Не так давно прошла закрытая встреча руководителей Apple и Samsung, результатом которой, кажется, стало вот что: [Samsung и Google подписали глобальное патентное соглашение](http://global.samsungtomorrow.com/?p=33461). На следующие 10 лет Гугл и Самсунг объединяют большую часть своих патентных пулов для того, чтобы "фокусироваться на инновациях" и 
-"уменьшить судебные иски". Понятно да?
+"уменьшить судебные иски". Понятно, да?
 
-Apple не отказалась от своих исков, так что Samsung пошел и сдался в рабство. Почему я считаю что это рабство? Прямо сейчас условия GMS становятся всё жестче и жестче, по сути Samsung ни черта не контролирует то, что происходит на их собственных телефонах после покупки. Поверьте, ни один производитель железа не хочет быть **только** производителем железа. Представьте, что, скажем, заводу, производящему автомобили, запретили выпускать запчасти. Сейчас запчасти составляют до 20% доходов от каждого автомобиля. Если автоконцерн не рассчитывает их в своей прибыли - ему остается только повысить на 20% цену на "железо", т. е. автомобиль. Но повышение цены на 20% приведет к снижению конкурентоспособности всей компании.
+Apple не отказалась от своих исков, так что Samsung пошел и сдался в рабство. Почему я считаю, что это рабство? Прямо сейчас условия GMS становятся всё жестче и жестче, по сути Samsung ни черта не контролирует то, что происходит на их собственных телефонах после покупки. Поверьте, ни один производитель железа не хочет быть **только** производителем железа. Представьте, что, скажем, заводу, производящему автомобили, запретили выпускать запчасти. Сейчас запчасти составляют до 20% доходов от каждого автомобиля. Если автоконцерн не рассчитывает их в своей прибыли - ему остается только повысить на 20% цену на "железо", т.е. на автомобиль. Но повышение цены на 20% приведет к снижению конкурентоспособности всей компании.
 
-Вот так и самсунг: рассчитывать на какие-либо прибыли от устройства после продажи он не может, более того, выплаты в Гугл за каждое устройство постоянно растут, а контроль всё ужесточается. Посочувствуем компании. Ну, и можем порадоваться за Гугл, конечно. По сути, они получили второй завод для производства своих железок - сначала Моторолла (за деньги), теперь Самсунг (за патенты).
+Вот так и самсунг: рассчитывать на какие-либо прибыли от устройства после продажи он не может, более того, выплаты в Гугл за каждое устройство постоянно растут, а контроль всё ужесточается. Посочувствуем компании. Ну, и можем порадоваться за Гугл, конечно. По сути, они получили второй завод для производства своих железок - сначала Моторола (за деньги), теперь Самсунг (за патенты).
 
 -----
 
 ## Ссылки
 
 * Google [купил DeepMind](http://recode.net/2014/01/26/exclusive-google-to-buy-artificial-intelligence-startup-deepmind-for-400m/), одну из тёмных лошадок в области искуственного интеллекта и машинного обучения. Компания лондонская, сумма сделки - $400м, у компании не выпущено ни одного реального продукта. Зато масса "секретных наработок", о которых мне и многим другим рассказывали в кулуарах. И наклёвывающиеся госзаказы от некоторых европейских стран. Ну, теперь-то, наверное, всё закроют, а команда DeepMind будет заниматься чем-то новым, например модернизацией искусственного интеллекта Nest. Для понимания покупки: [Выступление](http://vimeo.com/17513841) [Дэмиса Хассабиса](http://en.wikipedia.org/wiki/Demis_Hassabis), основателя DeepMind, на Singularity Summit. Тема выступления -  "Как можно использовать неврологию для построения систем искуственного интеллекта".  
-* Как работают журналисты. Блоггер на сайте Forbes пишет: [Банк Китая запретил денежные переводы в юанях на время Нового Года](http://www.forbes.com/sites/gordonchang/2014/01/26/china-halts-bank-cash-transfers-2/). И куча журналистов пошли это перепечатывать (в т. ч. и российская пресса, кстати). Якобы Банк Китая потребовал от Ситибанка прекратить переводы между внутрикитайскими аккаунтами (на самом деле нет). Вот [хороший разбор](http://www.zerohedge.com/news/2014-01-26/no-there-no-stoppage-cash-transfers-china) того, что случилось на самом деле. Простите за финансовые ссылки в этом бложеке, я просто был так возмущён :)
-* TNW: [Перестаньте напрямую сравнивать WeChat и WhatsApp](http://thenextweb.com/asia/2014/01/24/messaging-stop-comparing-wechat-whatsapp/#!tgjsI). На самом деле, сравнивать их надо. Но, стоит понимать, что это разные бизнесы и разные продукты. И да, WeChat меня бесит своим интерфейсом, но он сейчас куда продвинутей WhatsApp'а.
+* Как работают журналисты. Блоггер на сайте Forbes пишет: [Банк Китая запретил денежные переводы в юанях на время Нового Года](http://www.forbes.com/sites/gordonchang/2014/01/26/china-halts-bank-cash-transfers-2/). И куча журналистов пошли это перепечатывать (в т.ч. и российская пресса, кстати). Якобы Банк Китая потребовал от Ситибанка прекратить переводы между внутрикитайскими аккаунтами (на самом деле нет). Вот [хороший разбор](http://www.zerohedge.com/news/2014-01-26/no-there-no-stoppage-cash-transfers-china) того, что случилось на самом деле. Простите за финансовые ссылки в этом бложеке, я просто был так возмущён :)
+* TNW: [Перестаньте напрямую сравнивать WeChat и WhatsApp](http://thenextweb.com/asia/2014/01/24/messaging-stop-comparing-wechat-whatsapp/#!tgjsI). На самом деле, сравнивать их надо. Но стоит понимать, что это разные бизнесы и разные продукты. И да, WeChat меня бесит своим интерфейсом, но он сейчас куда продвинутей WhatsApp'а.
 * m00t, если вы знаете кто это, [рассказал что DrawQuest закрывается](http://chrishateswriting.com/post/74083032842/today-my-startup-failed), стартап не взлетел. Это его второй фейл, надеюсь, не последний. Перед этим, напомню, точно так же пофейлился [Canvas](http://canv.as). Итого, единственный большой успех мута - 4chan.
-* Уже [6 человек купили полет в космос за биткоины](http://www.coindesk.com/richard-branson-6-bitcoin-customers-confirmed-virgin-galactic-space-filght/). Если не придумаю что с ними делать - тоже куплю. Молодец Брэнсон, собирать деньги под то, что может и не произойдет - офигенная модель для бизнеса!
+* Уже [6 человек купили полет в космос за биткоины](http://www.coindesk.com/richard-branson-6-bitcoin-customers-confirmed-virgin-galactic-space-filght/). Если не придумаю, что с ними делать - тоже куплю. Молодец Брэнсон, собирать деньги под то, что может и не произойти - офигенная модель для бизнеса!
 * Очередная [история про Каяк и VPN](http://gizmodo.com/how-i-hacked-kayak-and-booked-a-cheaper-flight-1507368539). Если очень коротко - kayak, как и многие другие сайты, где ценна каждая покупка, умеют подставлять более высокую цену тем, кто готов платить больше. И наоборот, сбавлять цену, лишь бы купили.
-* Помните как Buffer рассказал о своей публичной политике зарплат? Дак вот, их [буквально засыпают резюме](http://qz.com/169147/applications-have-doubled-to-the-company-that-discloses-its-salaries/) желающие у них поработать. А я по наивности думал, что людям идеи интереснее денег. Буду успокаивать себя тем, что лично мне идеи интереснее.
+* Помните, как Buffer рассказал о своей публичной политике зарплат? Дак вот, их [буквально засыпают резюме](http://qz.com/169147/applications-have-doubled-to-the-company-that-discloses-its-salaries/) желающие у них поработать. А я по наивности думал, что людям идеи интереснее денег. Буду успокаивать себя тем, что лично мне идеи интереснее.
 * Twitter [запустили панель аналитики](https://blog.twitter.com/2014/introducing-analytics-for-twitter-cards) для тех, кто поддерживает twitter cards или дает рекламу в твиттере. Посмотрел, аналитика конечно довольно простая, но сильно лучше, чем полное её отсутствие. В общем ура, есть теперь куда смотреть и что мониторить.
 * Apple [убрали приложение Keynote Remote](http://9to5mac.com/2014/01/23/apple-silently-removes-keynote-remote-from-the-app-store-recommends-users-update-to-keynote-2-1-for-ios/). Вместо этого надо устанавливать Keynote для iOS - управлялка (и сильно улучшенная, надо сказать) - в нём. Очень здорово сделано, правда, денег стоит.
 
@@ -35,4 +35,4 @@ Apple не отказалась от своих исков, так что Samsun
 * [Статья об I/O в Rust](http://blog.safaribooksonline.com/2014/01/23/file-io-rust/). Только мне кажется, что синтаксис ввода-вывода писали чужие (для сообщества rust) люди? Ужасно же! 
 * Очень интересно: [Druid.io](http://druid.io/), распределённое реалтаймовое хранилище данных для аналитики. Кажется, я его уже видел, но так и не изучил, а стоит, судя по рекомендациям.
 * [Глиняная табличка, описывающая устройство ковчега](http://www.news.com.au/technology/science/a-4000yearold-tablet-from-ancient-mesopotamia-contains-the-specifications-for-an-ark-predating-the-story-of-noah/story-fnjwl1aw-1226810293590) и слегка более старая, чем Ной, если верить официальной хронологии. История красивая, но смешная. А у меня, между прочим, есть чертежи Звезды смерти, которые были опубликованы задолго до появления самой Звезды смерти, дада!
-* Самый смешной [матч по настольному тенису](http://www.youtube.com/watch?v=ITR88wT8ekM#t=203). Особенно смешно, когда хоть немножко понимаешь китайский! Матч проходной, по этому мастера развлекаются вовсю! :)
+* Самый смешной [матч по настольному тенису](http://www.youtube.com/watch?v=ITR88wT8ekM#t=203). Особенно смешно, когда хоть немножко понимаешь китайский! Матч проходной, поэтому мастера развлекаются вовсю! :)
