--- a/pages/2014-01-28.md
+++ b/pages/2014-01-28.md
@@ -8,21 +8,21 @@
 
 Давайте начнем с малого: скайп совершенно не предназначен для работы с нескольких устройств одновременно. Т. е. он, буквально, отправляет сообщения во все устройства, где я залогинен. У меня дома три ноутбука, два аймака, два айпада, айфон и андроидный телефон. А теперь представьте: "привет, как дела?" - БЛЯМС-БЛЯМС-БЛЯМС-БЛЯМС-БЛЯМС-БЛЯМС-БЛЯМС-БЛЯМС-БЛЯМС. Бесит. А вас?
 
-Продолжим. Скайп не хранит централизованно логи общения. Т. е. буквально, если я сейчас выключу скайп на одной машине, напишу с другой несколько сообщений, включу первую машину - я не увижу своих же собственных сообщений. Я не говорю уже о тех сообщениях, которые я получил.
+Продолжим. Скайп не хранит централизованно логи общения. Т.е. буквально, если я сейчас выключу скайп на одной машине, напишу с другой несколько сообщений, включу первую машину - я не увижу своих же собственных сообщений. Я не говорю уже о тех сообщениях, которые я получил.
 
 Причина этого в отличной (для начала 2000ых) идее - не хранить сообщения на сервере, а передавать их строго peer-to-peer. Когда два абонента находятся онлайн, они передают друг другу куски истории, чтобы восстановить всю историю общения. Если могут. Как вы понимаете, если какая-то часть сообщений была написана и получена с устройств, которые сейчас недоступны - всё, истории у вас нет.
 
-Третье, и самое важное, является следствием предыдущего. Смиритесь, у скайпа нет возможности отправить сообщение в оффлайн. Т. е. вы видите, что ваш контакт находится не в сети. Вы отправляете ему сообщение с мыслью "когда человек появится в сети - он получит сообщение". Ну, как в других, нормальных мессенджерах, да? Нет. Для того, чтобы человек получил от вас сообщение **вы оба** должны быть онлайн. Т. е. вы не получите оффлайн сообщение от человека до тех пор, пока отправитель не выйдет в сеть. Всё разумно. P2P технологии. Защита информации от источников самой информации.
+Третье, и самое важное, является следствием предыдущего. Смиритесь, у скайпа нет возможности отправить сообщение в оффлайн. Т.е. вы видите, что ваш контакт находится не в сети. Вы отправляете ему сообщение с мыслью "когда человек появится в сети - он получит сообщение". Ну, как в других, нормальных мессенджерах, да? **Нет**. Для того, чтобы человек получил от вас сообщение **вы оба** должны быть онлайн. Т. е. вы не получите оффлайн сообщение от человека до тех пор, пока отправитель не выйдет в сеть. Всё разумно. P2P технологии. Защита информации от источников самой информации.
 
-Поймите меня правильно, я действительно хорошо отношусь к Skype. Но если вы хотите, чтобы я получил сообщение - пишите куда угодно. В твиттер. В фейсбук. В лайн, вотзап, вичат, хэнгаут, смс, телеграм, инстаграм, килограм. Но не в скайп, пожалуйста. Спасибо за понимание.
+Поймите меня правильно, я действительно хорошо отношусь к Skype. Но, если вы хотите, чтобы я получил сообщение - пишите куда угодно. В твиттер. В фейсбук. В лайн, вотзап, вичат, хэнгаут, смс, телеграм, инстаграм, килограм. Но не в скайп, пожалуйста. Спасибо за понимание.
 
 ----
 
 
 * В последнем апдейте приложения Facebook для андроида зачем-то [затребован доступ к вашим SMS](http://tony.calileo.com/fb/). Думаю, они хотят воевать с WhatsApp, и для этого хотят иметь возможность отправлять (и читать) SMS сообщения от ваших друзей с фейсбука. Все логично, но параноики уже ноют. Я не ною, но доступ ручками отобрал, на всякий случай.
-* Kevin Chen не может пользоваться Square, потому что [система защиты от фрода считает что он не настоящий человек](http://kevinchen.co/blog/square-identity-verification/). Подумаешь. У нас тут полмира не может пользоваться Square, потому что мы из неправильных стран! :) Нет, если серьёзно - это, правда, непонятно, можно ли, и этично ли применять системы автоматического антифрода для живых кастомеров, а не для компаний. С компаниями-то всегда разобраться можно, а вот живых людей жалко.
+* Kevin Chen не может пользоваться Square, потому что [система защиты от фрода считает, что он не настоящий человек](http://kevinchen.co/blog/square-identity-verification/). Подумаешь. У нас тут полмира не может пользоваться Square, потому что мы из неправильных стран! :) Нет, если серьёзно - это, правда непонятно, можно ли, и этично ли применять системы автоматического антифрода для живых кастомеров, а не для компаний. С компаниями-то всегда разобраться можно, а вот живых людей жалко.
 * Новость вполне в духе Guardian: [Uber судят за то, что один из водителей задавил пешехода](http://www.theguardian.com/world/2014/jan/27/uber-sued-family-six-year-old-killed-crash-san-francisco). Я не понимаю, почему об этом написали все газеты, а о том, что таксисты регулярно давят людей - не пишет никто? Неинтересно, потому что не про миллиардную компанию, или что?
-* Гуглоочки теперь [можно прицепить на нормальные очки](http://recode.net/2014/01/27/google-glass-now-works-with-actual-glasses/). На самом деле нет - просто они выпустили новые гуглоочки, c хипстерской титановой оправой. В них можно вставлять оптические линзы, для тех кто не очень хорошо видит. В общем логичный шаг, конечно.
+* Гуглоочки теперь [можно прицепить на нормальные очки](http://recode.net/2014/01/27/google-glass-now-works-with-actual-glasses/). На самом деле нет - просто они выпустили новые гуглоочки, c хипстерской титановой оправой. В них можно вставлять оптические линзы, для тех, кто не очень хорошо видит. В общем, логичный шаг, конечно.
 * Егор Хомяков опять нашел дыру, [на этот раз - даже две, в Фейсбуке](http://homakov.blogspot.ru/2014/01/two-severe-wontfix-vulnerabilities-in.html). Я обычно не очень люблю людей, рассказывающих о дырах в безопасности. Но Егор правильный - сначала пишет владельцу сайта, и только после окончания разборок публикует отчёт.
 * [Патч поддержки SPDY/3.1 в nginx](http://mailman.nginx.org/pipermail/nginx-devel/2014-January/004890.html) от самих разработчиков. Разрабатывался при поддержке большого количества других компаний, кстати. Но поддержки QUIC пока нет, ждем. Напомню (возможно, это только моё мнение), что пока никакой реальной пользы от SPDY в реальной жизни нет, все тесты на реальных сервисах не показывают измеримого выигрыша в скорости или чём-то таком. Но я за любую движуху - поэтому, конечно, SPDY это хорошо.
 * Саймон Тэтхэм написал [статью-учебник по современному C](http://www.chiark.greenend.org.uk/~sgtatham/cdescent/). Конечно, для тех, кто уже и так пишет на C, потому что базовый синтаксис там не показан. Но я согласен почти с каждой строчкой в статье - современный plain C именно такой.
