--- a/pages/2014-01-10.md
+++ b/pages/2014-01-10.md
@@ -36,7 +36,7 @@
 * Марко [написал очередной пост "гугл - зло"](http://www.marco.org/2014/01/09/more-google-sleaze). На самом деле нет. Весь сыр бор вокруг фичи "легко послать письмо любому, кто зарегистрирован в гуглкрест". Я согласен с тем, что фича ужасная. И согласен с тем, что загонять всех насильно в соцсеточку - перебор. Но пока всё не так масштабно.
 * Github [запускает свой deployment api](http://developer.github.com/changes/2014-01-09-preview-the-new-deployments-api/). И вот что интересно, никто пока не кричит "гитхаб убивает стартапы!!!11", при том что огромное количество проектов сейчас делается именно про continuous deployment, вот например [dploy.io из свежих](http://dploy.io/). Любят гики гитхаб, ох любят. И я в том числе.
 * [Зарелизился](https://mail.mozilla.org/pipermail/rust-dev/2014-January/007753.html) Rust 0.9. Чем дальше я на него смотрю, тем больше он мне как язык нравится. Ребята из Мозиллы пытаются сделать действительно современного идейного наследника C.
-* На CES [показали текущий прототип Occulus Rift](http://techcrunch.com/2014/01/09/oculus-vr-crystal-cove/) и он ровно так чудесен, как я представлял. Вот за такими штуками ближайшее будущее. Да, использоваться оно будет, в первую очередь, для игр, кино и порно, но это действительно вызывает восхищение. Очень хочу!
+* На CES [показали текущий прототип Oculus Rift](http://techcrunch.com/2014/01/09/oculus-vr-crystal-cove/) и он ровно так чудесен, как я представлял. Вот за такими штуками ближайшее будущее. Да, использоваться оно будет, в первую очередь, для игр, кино и порно, но это действительно вызывает восхищение. Очень хочу!
 * [Frida - странная штука](http://www.frida.re/docs/home/). Кто понял, в чём **реальное** применение, расскажете потом? Я пока придумал только, как использовать её для реверс-инжиниринга, но это из пушки по воробьям, кажется.
 * moot хорошо [рассказали, почему у них никаких фреймворков](https://moot.it/blog/technology/frameworkless-javascript.html) на клиентской стороне, всё написано на обычном джаваскрипте. Кстати, присмотритесь к самому [moot](http://moot.it) - один из лучших встраиваемых движков форумов и комментариев. Кстати, я о нём ещё год назад писал.
 * [Crypto.cat](https://crypto.cat/), отличный супер-секурный (ну, насколько это возможно в браузере) движок чатов готовы выпустить [опенсорс версию для андроида и айфона](https://blog.crypto.cat/2013/12/cryptocat-for-iphone-call-for-review/?nocache). И очень просят почитать и попробовать. Нутесь, попробуем?
